// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineItem color work 1`] = `
"<li class=\\"ix-timeline-item\\">
  <div class=\\"ix-timeline-item-line\\"></div>
  <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-red\\">
    <!---->
  </div>
  <div class=\\"ix-timeline-item-content\\">
    <div class=\\"ix-timeline-item-label\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-desc\\">
      <!---->
    </div>
  </div>
</li>"
`;

exports[`TimelineItem color work 2`] = `
"<li class=\\"ix-timeline-item\\">
  <div class=\\"ix-timeline-item-line\\"></div>
  <div class=\\"ix-timeline-item-dot\\" style=\\"color: black; border-color: black;\\">
    <!---->
  </div>
  <div class=\\"ix-timeline-item-content\\">
    <div class=\\"ix-timeline-item-label\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-desc\\">
      <!---->
    </div>
  </div>
</li>"
`;

exports[`TimelineItem dot slot work 1`] = `
"<li class=\\"ix-timeline-item\\">
  <div class=\\"ix-timeline-item-line\\"></div>
  <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\">dotSlotText</div>
  <div class=\\"ix-timeline-item-content\\">
    <div class=\\"ix-timeline-item-label\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-desc\\">
      <!---->
    </div>
  </div>
</li>"
`;

exports[`TimelineItem dot slot work 2`] = `
"<li class=\\"ix-timeline-item\\">
  <div class=\\"ix-timeline-item-line\\"></div>
  <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\">dotSlotText</div>
  <div class=\\"ix-timeline-item-content\\">
    <div class=\\"ix-timeline-item-label\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-desc\\">
      <!---->
    </div>
  </div>
</li>"
`;

exports[`TimelineItem dot work 1`] = `
"<li class=\\"ix-timeline-item\\">
  <div class=\\"ix-timeline-item-line\\"></div>
  <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
    <!---->
  </div>
  <div class=\\"ix-timeline-item-content\\">
    <div class=\\"ix-timeline-item-label\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-desc\\">
      <!---->
    </div>
  </div>
</li>"
`;

exports[`TimelineItem dot work 2`] = `
"<li class=\\"ix-timeline-item\\">
  <div class=\\"ix-timeline-item-line\\"></div>
  <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-custom ix-timeline-item-dot-primary\\">dotText</div>
  <div class=\\"ix-timeline-item-content\\">
    <div class=\\"ix-timeline-item-label\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-desc\\">
      <!---->
    </div>
  </div>
</li>"
`;

exports[`TimelineItem render work 1`] = `
"<li class=\\"ix-timeline-item\\">
  <div class=\\"ix-timeline-item-line\\"></div>
  <div class=\\"ix-timeline-item-dot ix-timeline-item-dot-primary\\">
    <!---->
  </div>
  <div class=\\"ix-timeline-item-content\\">
    <div class=\\"ix-timeline-item-label\\">
      <!---->
    </div>
    <div class=\\"ix-timeline-item-desc\\">
      <!---->
    </div>
  </div>
</li>"
`;
